--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Your browser does not support the HTML5 canvas tag.
 </figure>
 
 <button name="button" type="button">Click Here</button>
-
-var emp=["Shyam","Vimal","Ratan"];  
+<img src="htmlpages/images/tajmahal.jpg" alt="Taj Mahal"/>
+var emp=["Shyam","Vimal","Ratan"];
   </body>
 </html>
